Bug 284600 - Locking problem: When installing programs, muon only shows "waiting"
Summary: Locking problem: When installing programs, muon only shows "waiting"
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 1.2.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-21 09:09 UTC by Willi Richert
Modified: 2012-02-23 03:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0, 1.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Willi Richert 2011-10-21 09:09:33 UTC
Version:           0.2 (using KDE 4.7.2) 
OS:                Linux

I ran aptitude in parallel, which resulted in a locking problem with muon.
I removed the lock files and aptitude runs fine now. Muon still does not install anything (it used to work fine before I used aptitude in parallel).

I would like to have a menu item like "remove stale locks" or similar.

Reproducible: Didn't try

Steps to Reproduce:
-

Actual Results:  
Muon is stalled (probably due to locking)

Expected Results:  
Installing the programs

OS: Linux (i686) release 3.0.0-12-generic
Compiler: gcc
Comment 1 Jonathan Thomas 2012-02-23 03:14:42 UTC
This is actually a bug, where on subsequent attempts to install an application after closing another app with a lock doesn't work, but hangs there. (For example, you are able to install things just fine when using the Muon Package Manager instead of the Muon Software Center.)

I suspect the failed, stale transaction is lying around preventing new transactions from running.
Comment 2 Jonathan Thomas 2012-02-23 03:22:34 UTC
Git commit 98ff06245a9d5ef817c453b37f46f2ca831a6d91 by Jonathan Thomas.
Committed on 23/02/2012 at 04:21.
Pushed by jmthomas into branch '1.3'.

Cancel transactions that have failed from any error (other than cancel errors) rather
than just cancelling transactions when encountering AuthError.

This fixes issues with the Muon Software Center hanging on a certain transaction after
having any error other than an AuthError (such as a LockError, or CommitError, or...)
FIXED-IN:1.3.0

M  +2    -4    installer/ApplicationBackend.cpp

http://commits.kde.org/muon/98ff06245a9d5ef817c453b37f46f2ca831a6d91
Comment 3 Jonathan Thomas 2012-02-23 03:22:35 UTC
Git commit 64d5e752e5c71fdbe5c79e87ab2a1a07dcb35704 by Jonathan Thomas.
Committed on 23/02/2012 at 04:20.
Pushed by jmthomas into branch 'master'.

Cancel transactions that have failed from any error (other than cancel error) rather
than just cancelling transactions when encountering AuthError.

This fixes issues with the Muon Software Center hanging on a certain transaction after
having any error other than an AuthError (such as a LockError, or CommitError, or...)
FIXED-IN:1.4.0

M  +2    -4    libmuon/ApplicationBackend.cpp

http://commits.kde.org/muon/64d5e752e5c71fdbe5c79e87ab2a1a07dcb35704