Cancel transactions that have failed from any error (other than cancel error) rather than just cancelling transactions when encountering AuthError.

This fixes issues with the Muon Software Center hanging on a certain transaction after
having any error other than an AuthError (such as a LockError, or CommitError, or...)

BUG:284600
FIXED-IN:1.4.0